# algae-data-infrastructure

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.sql  data_quality_checks.sql  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sql_examples.sql  tatus
.github/workflows/: ci.yml
algae_lib/: __init__.py  db_io.py  flowcam_utils.py  s3_io.py
data_quality/great_expectations/: great_expectations.yml
data_quality/great_expectations/checkpoints/: flowcam_checkpoint.yml
docs/: OVERVIEW.md  S3_PARTITIONING.md
docs/diagrams/: architecture.mmd
examples/data-sample/: flowcam_sample.csv
examples/data-sources/: README.md  flowcam_processor_example.py  growth_processor_example.py  harvest_processor_example.py  scada_processor_example.py  weather_processor_example.py
orchestration/airflow/dags/: flowcam_daily.py
orchestration/airflow/plugins/: __init__.py
orchestration/airflow/tests/: test_dag_integrity.py
scripts/: seed_demo_data.py
serving/analytics/: README.md
serving/api/: README.md
tests/: __init__.py
tests/unit/: test_flowcam_utils.py  test_s3_io.py
transform/dbt/: dbt_project.yml  packages.yml
transform/dbt/models/: schema.yml
transform/dbt/models/bronze/: bz_flowcam__raw.sql
transform/dbt/models/gold/: gd_flowcam__daily_summary.sql
transform/dbt/models/marts/: dim_tpu.sql  fact_flowcam__daily_summary.sql  fact_flowcam__summary.sql  fact_growth__tracking.sql  fact_harvest__records.sql  fact_scada__daily_metrics.sql  fact_weather__daily.sql
transform/dbt/models/silver/: sl_flowcam__standardized.sql
transform/dbt/models/staging/flowcam/: stg_flowcam__raw.sql  stg_flowcam__records.sql
transform/dbt/models/staging/growth_tracking/: stg_growth__tracking.sql
transform/dbt/models/staging/harvest/: stg_harvest__records.sql
transform/dbt/models/staging/scada/: stg_scada__citect.sql  stg_scada__raw.sql
transform/dbt/models/staging/weather/: stg_weather__daily.sql
